Overhaul expressions - have specific list nodes, unary nodes, and binary nodes for productions that make sense as them.  Redo binary node deep checks as post-order checks.  Overhaul rest of expressions AST classes not to just have a list of children but typed children.  Overhauled test cases as a result.